--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@
 buildscript {
   ext.kotlin_version = '1.1.3-2'
   repositories {
+    maven { url 'https://maven.google.com' }
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.2'
-    classpath 'me.tatarka:gradle-retrolambda:3.7.0'
-    classpath 'com.google.gms:google-services:3.1.0'
-    classpath 'com.google.firebase:firebase-plugins:1.1.0'
+    classpath 'com.android.tools.build:gradle:3.0.0-beta7'
+    classpath 'com.google.gms:google-services:3.1.1'
+    classpath 'com.google.firebase:firebase-plugins:1.1.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
@@ -31,7 +31,7 @@ ext {
   minSdkVersion = 21
   compileSdkVersion = 26
   targetSdkVersion = compileSdkVersion
-  buildToolsVersion = '25.0.2'
+  buildToolsVersion = '26.0.2'
   sourceCompatibility = JavaVersion.VERSION_1_8
 }
 
