--- a/client-data/build.gradle
+++ b/client-data/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -19,24 +18,23 @@ android {
 }
 
 dependencies {
-  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
   annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
   compile project(':client-domain')
 
-  compile 'com.android.support:appcompat-v7:26.0.0'
-  compile 'com.android.support:support-annotations:26.0.0'
+  compile 'com.android.support:appcompat-v7:26.1.0'
+  compile 'com.android.support:support-annotations:26.1.0'
 
-  compile "android.arch.lifecycle:extensions:1.0.0-alpha8"
+  compile "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
 
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile 'com.squareup.retrofit2:converter-gson:2.3.0'
   compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
   compile 'com.google.code.gson:gson:2.8.1'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:3.8.0'
-  testCompile 'org.mockito:mockito-core:2.8.47'
-  testCompile 'com.android.support:support-annotations:26.0.0'
+  testCompile 'org.mockito:mockito-core:2.10.0'
+  testCompile 'com.android.support:support-annotations:26.1.0'
 }
