--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
@@ -45,35 +44,33 @@ android {
 }
 
 dependencies {
-  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
-
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
   compile project(':client-domain')
   compile project(':client-data')
 
-  compile 'com.android.support:appcompat-v7:26.0.0'
-  compile 'com.android.support:design:26.0.0'
-  compile 'com.android.support:cardview-v7:26.0.0'
-  compile 'com.android.support:customtabs:26.0.0'
-  compile 'com.android.support:support-compat:26.0.0'
-  compile 'com.android.support:animated-vector-drawable:26.0.0'
+  compile 'com.android.support:appcompat-v7:26.1.0'
+  compile 'com.android.support:design:26.1.0'
+  compile 'com.android.support:cardview-v7:26.1.0'
+  compile 'com.android.support:customtabs:26.1.0'
+  compile 'com.android.support:support-compat:26.1.0'
+  compile 'com.android.support:animated-vector-drawable:26.1.0'
 
-  compile 'com.google.firebase:firebase-core:11.0.4'
-  compile 'com.google.firebase:firebase-crash:11.0.4'
-  compile 'com.google.firebase:firebase-config:11.0.4'
-  compile 'com.google.firebase:firebase-perf:11.0.4'
-  compile 'com.google.firebase:firebase-messaging:11.0.4'
-  compile 'com.google.firebase:firebase-database:11.0.4'
+  compile 'com.google.firebase:firebase-core:11.4.2'
+  compile 'com.google.firebase:firebase-crash:11.4.2'
+  compile 'com.google.firebase:firebase-config:11.4.2'
+  compile 'com.google.firebase:firebase-perf:11.4.2'
+  compile 'com.google.firebase:firebase-messaging:11.4.2'
+  compile 'com.google.firebase:firebase-database:11.4.2'
 
-  compile "android.arch.lifecycle:runtime:1.0.0-alpha8"
+  compile "android.arch.lifecycle:runtime:1.0.0"
 
-  compile 'com.facebook.fresco:fresco:1.4.0'
+  compile 'com.facebook.fresco:fresco:1.5.0'
 
-  compile 'com.jakewharton:butterknife:8.7.0'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+  compile 'com.jakewharton:butterknife:8.8.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-  compile 'com.airbnb.android:epoxy:2.2.0'
+  compile 'com.airbnb.android:epoxy:2.5.0'
 
   annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
@@ -86,15 +83,15 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'javax.inject:javax.inject:1'
-  testCompile 'org.mockito:mockito-core:2.8.47'
+  testCompile 'org.mockito:mockito-core:2.10.0'
   testCompile 'org.assertj:assertj-core:3.8.0'
-  testCompile 'org.threeten:threetenbp:1.3.3' // to fix failures with three ten db
-  testCompile 'com.android.support:support-annotations:26.0.0' //to fix dependency conflicts
+  testCompile 'org.threeten:threetenbp:1.3.6' // to fix failures with three ten db
+  testCompile 'com.android.support:support-annotations:26.1.0' //to fix dependency conflicts
 
   androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
   androidTestCompile 'com.android.support.test:runner:0.5'
-  androidTestCompile 'com.android.support:support-annotations:26.0.0' //to fix dependency conflicts
-  androidTestCompile 'org.mockito:mockito-core:2.8.47'
+  androidTestCompile 'com.android.support:support-annotations:26.1.0' //to fix dependency conflicts
+  androidTestCompile 'org.mockito:mockito-core:2.10.0'
   androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
 }
 
