--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.2.31'
+  ext.kotlin_version = '1.2.30'
   repositories {
     google()
     maven { url 'https://maven.fabric.io/public' }
@@ -9,7 +9,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.1'
+    classpath 'com.android.tools.build:gradle:3.1.3'
     classpath 'com.google.gms:google-services:3.2.1'
     classpath 'com.google.firebase:firebase-plugins:1.1.1'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -32,8 +32,8 @@ task clean(type: Delete) {
 subprojects {
 
   project.plugins.whenPluginAdded { plugin ->
-    if ('com.android.build.gradle.AppPlugin'.equals(plugin.class.name)
-        || 'com.android.build.gradle.LibraryPlugin'.equals(plugin.class.name)) {
+    if ('com.android.build.gradle.AppPlugin' == plugin.class.name
+        || 'com.android.build.gradle.LibraryPlugin' == plugin.class.name) {
 
       project.android.testOptions.unitTests.all {
         testLogging {
