--- a/client-data/build.gradle
+++ b/client-data/build.gradle
@@ -16,9 +16,9 @@ android {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  kapt 'com.google.dagger:dagger-compiler:2.15'
+  kapt 'com.google.dagger:dagger-compiler:2.16'
 
   compile project(':client-domain')
 
@@ -30,13 +30,13 @@ dependencies {
   compile 'com.squareup.retrofit2:retrofit:2.4.0'
   compile 'com.squareup.retrofit2:converter-gson:2.4.0'
   compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-  compile 'com.google.code.gson:gson:2.8.2'
+  compile 'com.google.code.gson:gson:2.8.5'
   compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
   compile 'com.jakewharton.timber:timber:4.7.0'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.assertj:assertj-core:3.9.1'
-  testCompile 'org.mockito:mockito-core:2.18.0'
+  testCompile 'org.assertj:assertj-core:3.10.0'
+  testCompile 'org.mockito:mockito-core:2.19.0'
   testCompile 'com.android.support:support-annotations:27.1.1'
 }
