--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -12,18 +12,18 @@ sourceSets {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  compile 'com.google.dagger:dagger:2.15'
-  provided 'com.google.dagger:dagger-compiler:2.15'
+  compile 'com.google.dagger:dagger:2.16'
+  provided 'com.google.dagger:dagger-compiler:2.16'
 
-  compile 'io.reactivex.rxjava2:rxjava:2.1.12'
+  compile 'io.reactivex.rxjava2:rxjava:2.1.14'
   compile 'com.squareup.okhttp3:okhttp:3.10.0'
-  compile 'com.squareup.okio:okio:1.14.0'
+  compile 'com.squareup.okio:okio:1.14.1'
 
   compile 'org.threeten:threetenbp:1.3.6:no-tzdb'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.assertj:assertj-core:3.9.1'
-  testCompile 'org.mockito:mockito-core:2.18.0'
+  testCompile 'org.assertj:assertj-core:3.10.0'
+  testCompile 'org.mockito:mockito-core:2.19.0'
 }
