--- a/client/build.gradle
+++ b/client/build.gradle
@@ -52,7 +52,7 @@ android {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
   compile project(':client-domain')
   compile project(':client-data')
@@ -64,12 +64,12 @@ dependencies {
   compile 'com.android.support:support-compat:27.1.1'
   compile 'com.android.support:animated-vector-drawable:27.1.1'
 
-  compile 'com.google.firebase:firebase-core:15.0.2'
-  compile 'com.google.firebase:firebase-config:15.0.2'
-  compile 'com.google.firebase:firebase-perf:15.1.0'
-  compile 'com.google.firebase:firebase-messaging:15.0.2'
-  compile 'com.google.firebase:firebase-database:15.0.1'
-  compile 'com.crashlytics.sdk.android:crashlytics:2.9.2'
+  compile 'com.google.firebase:firebase-core:16.0.1'
+  compile 'com.google.firebase:firebase-config:16.0.0'
+  compile 'com.google.firebase:firebase-perf:16.0.0'
+  compile 'com.google.firebase:firebase-messaging:17.0.0'
+  compile 'com.google.firebase:firebase-database:16.0.1'
+  compile 'com.crashlytics.sdk.android:crashlytics:2.9.4'
 
   compile 'android.arch.lifecycle:runtime:1.1.1'
 
@@ -78,32 +78,33 @@ dependencies {
   compile 'com.jakewharton:butterknife:8.8.1'
   kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 
-  compile 'com.airbnb.android:epoxy:2.11.0'
+  compile 'com.airbnb.android:epoxy:2.13.0'
 
-  kapt 'com.google.dagger:dagger-compiler:2.15'
+  kapt 'com.google.dagger:dagger-compiler:2.16'
 
   compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
-  compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+  compile 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 
-  testCompile 'com.google.code.gson:gson:2.8.2'
+  testCompile 'com.google.code.gson:gson:2.8.5'
 
   testCompile 'junit:junit:4.12'
   testCompile 'javax.inject:javax.inject:1'
-  testCompile 'org.mockito:mockito-core:2.18.0'
-  testCompile 'org.assertj:assertj-core:3.9.1'
+  testCompile 'org.mockito:mockito-core:2.19.0'
+  testCompile 'org.assertj:assertj-core:3.10.0'
   testCompile 'org.threeten:threetenbp:1.3.6' // to fix failures with three ten db
   testCompile 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
 
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-  androidTestCompile 'com.android.support.test:runner:1.0.1'
-  androidTestCompile 'org.assertj:assertj-core:3.9.1'
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestCompile 'com.android.support.test:runner:1.0.2'
+  androidTestCompile 'com.android.support.test:rules:1.0.2'
+  androidTestCompile 'org.assertj:assertj-core:3.10.0'
   androidTestCompile 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
   androidTestCompile 'org.mockito:mockito-core:2.9.0'
-  // now freezed at 2.9.0, higher version crash the UI tests
+  // now frozen at 2.9.0, higher version crash the UI tests
   androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
   androidTestCompile 'com.airbnb.okreplay:okreplay:1.4.0'
   androidTestCompile 'com.airbnb.okreplay:espresso:1.4.0'
-  androidTestCompile 'org.assertj:assertj-core:3.9.1'
+  androidTestCompile 'org.assertj:assertj-core:3.10.0'
 
 }
 
