--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 configurations {
@@ -12,18 +12,18 @@ sourceSets {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  compile 'com.google.dagger:dagger:2.16'
-  provided 'com.google.dagger:dagger-compiler:2.16'
+  api 'com.google.dagger:dagger:2.17'
+  provided 'com.google.dagger:dagger-compiler:2.17'
 
-  compile 'io.reactivex.rxjava2:rxjava:2.1.14'
-  compile 'com.squareup.okhttp3:okhttp:3.10.0'
-  compile 'com.squareup.okio:okio:1.14.1'
+  api 'io.reactivex.rxjava2:rxjava:2.2.1'
+  api 'com.squareup.okhttp3:okhttp:3.11.0'
+  api 'com.squareup.okio:okio:1.15.0'
 
-  compile 'org.threeten:threetenbp:1.3.6:no-tzdb'
+  api 'org.threeten:threetenbp:1.3.7:no-tzdb'
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.assertj:assertj-core:3.10.0'
-  testCompile 'org.mockito:mockito-core:2.19.0'
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'org.assertj:assertj-core:3.11.0'
+  testImplementation 'org.mockito:mockito-core:2.21.0'
 }
