--- a/client/build.gradle
+++ b/client/build.gradle
@@ -13,8 +13,8 @@ android {
     applicationId "com.jraska.github.client"
     minSdkVersion 21
     targetSdkVersion 27
-    versionName '0.7.0'
-    versionCode 7
+    versionName '0.8.0'
+    versionCode 8
     multiDexEnabled true
 
     testInstrumentationRunner "com.jraska.github.client.TestRunner"
@@ -52,59 +52,58 @@ android {
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  compile project(':client-domain')
-  compile project(':client-data')
+  api project(':client-domain')
+  api project(':client-data')
 
-  compile 'com.android.support:appcompat-v7:27.1.1'
-  compile 'com.android.support:design:27.1.1'
-  compile 'com.android.support:cardview-v7:27.1.1'
-  compile 'com.android.support:customtabs:27.1.1'
-  compile 'com.android.support:support-compat:27.1.1'
-  compile 'com.android.support:animated-vector-drawable:27.1.1'
+  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'com.android.support:design:27.1.1'
+  implementation 'com.android.support:cardview-v7:27.1.1'
+  implementation 'com.android.support:customtabs:27.1.1'
+  implementation 'com.android.support:support-compat:27.1.1'
+  implementation 'com.android.support:animated-vector-drawable:27.1.1'
 
-  compile 'com.google.firebase:firebase-core:16.0.1'
-  compile 'com.google.firebase:firebase-config:16.0.0'
-  compile 'com.google.firebase:firebase-perf:16.0.0'
-  compile 'com.google.firebase:firebase-messaging:17.0.0'
-  compile 'com.google.firebase:firebase-database:16.0.1'
-  compile 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+  implementation 'com.google.firebase:firebase-core:16.0.3'
+  implementation 'com.google.firebase:firebase-config:16.0.0'
+  implementation 'com.google.firebase:firebase-perf:16.1.0'
+  implementation 'com.google.firebase:firebase-messaging:17.3.0'
+  implementation 'com.google.firebase:firebase-database:16.0.1'
+  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
-  compile 'android.arch.lifecycle:runtime:1.1.1'
+  implementation 'android.arch.lifecycle:runtime:1.1.1'
 
-  compile 'com.facebook.fresco:fresco:1.9.0'
+  implementation 'com.facebook.fresco:fresco:1.10.0'
 
-  compile 'com.jakewharton:butterknife:8.8.1'
+  implementation 'com.jakewharton:butterknife:8.8.1'
   kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 
-  compile 'com.airbnb.android:epoxy:2.13.0'
+  implementation 'com.airbnb.android:epoxy:2.16.3'
 
-  kapt 'com.google.dagger:dagger-compiler:2.16'
+  kapt 'com.google.dagger:dagger-compiler:2.17'
 
-  compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
-  compile 'com.jakewharton.threetenabp:threetenabp:1.1.0'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+  implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 
-  testCompile 'com.google.code.gson:gson:2.8.5'
+  testImplementation 'com.google.code.gson:gson:2.8.5'
 
-  testCompile 'junit:junit:4.12'
-  testCompile 'javax.inject:javax.inject:1'
-  testCompile 'org.mockito:mockito-core:2.19.0'
-  testCompile 'org.assertj:assertj-core:3.10.0'
-  testCompile 'org.threeten:threetenbp:1.3.6' // to fix failures with three ten db
-  testCompile 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
+  testImplementation 'junit:junit:4.12'
+  testImplementation 'javax.inject:javax.inject:1'
+  testImplementation 'org.mockito:mockito-core:2.21.0'
+  testImplementation 'org.assertj:assertj-core:3.11.0'
+  testImplementation 'org.threeten:threetenbp:1.3.7' // to fix failures with three ten db
+  testImplementation 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
 
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.2'
-  androidTestCompile 'com.android.support.test:runner:1.0.2'
-  androidTestCompile 'com.android.support.test:rules:1.0.2'
-  androidTestCompile 'org.assertj:assertj-core:3.10.0'
-  androidTestCompile 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
-  androidTestCompile 'org.mockito:mockito-core:2.9.0'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test:rules:1.0.2'
+  androidTestImplementation 'org.assertj:assertj-core:3.11.0'
+  androidTestImplementation 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
+  androidTestImplementation 'org.mockito:mockito-core:2.9.0'
   // now frozen at 2.9.0, higher version crash the UI tests
-  androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
-  androidTestCompile 'com.airbnb.okreplay:okreplay:1.4.0'
-  androidTestCompile 'com.airbnb.okreplay:espresso:1.4.0'
-  androidTestCompile 'org.assertj:assertj-core:3.10.0'
+  androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
+  androidTestImplementation 'com.airbnb.okreplay:okreplay:1.4.0'
+  androidTestImplementation 'com.airbnb.okreplay:espresso:1.4.0'
 
 }
 
