--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+import com.jraska.github.client.AssertModuleTreeHeight
+import com.jraska.github.client.GenerateProjectsGraphTask
+
 buildscript {
   ext.kotlin_version = '1.3.50'
   repositories {
@@ -26,6 +29,13 @@ allprojects {
 
 task clean(type: Delete) {
   delete rootProject.buildDir
+}
+
+task generateGraph(type: GenerateProjectsGraphTask)
+
+task assertDependencyTreeHeight(type: AssertModuleTreeHeight) {
+  moduleName = ":app"
+  maxHeight = 4
 }
 
 subprojects {
