--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
-import com.jraska.github.client.AssertModuleTreeHeightTask
-import com.jraska.github.client.GenerateModulesGraphTask
-import com.jraska.github.client.GenerateOneModuleGraphTask
+import com.jraska.github.client.*
 
 buildscript {
   ext.kotlin_version = '1.3.50'
@@ -41,6 +39,14 @@ task generateOneModuleGraph(type: GenerateOneModuleGraphTask) {
 task assertDependencyTreeHeight(type: AssertModuleTreeHeightTask) {
   moduleName = ":app"
   maxHeight = 4
+}
+
+task assertNoFeatureDependencies(type: AssertInLayerDependencies) {
+  layerPrefix = ":feature"
+}
+
+task assertCorrectLayerDependencies(type: AssertCrossLayerDependencies) {
+  layersFromTheTop = [":feature", ":lib", ":core"]
 }
 
 subprojects {
