--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ if (project.hasProperty("enable-performance-plugin")) {
 apply plugin: 'io.fabric'
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion 29
 
   defaultConfig {
     applicationId "com.jraska.github.client"
     minSdkVersion 21
-    targetSdkVersion 28
+    targetSdkVersion 29
     versionName '0.17.0'
     versionCode 50
     multiDexEnabled true
@@ -87,26 +87,26 @@ dependencies {
 
   implementation 'androidx.appcompat:appcompat:1.1.0'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  implementation 'com.google.android.material:material:1.1.0-beta01'
+  implementation 'com.google.android.material:material:1.1.0-beta02'
   implementation 'androidx.cardview:cardview:1.0.0'
-  implementation 'androidx.browser:browser:1.0.0'
-  implementation 'androidx.core:core:1.2.0-beta01'
+  implementation 'androidx.browser:browser:1.2.0'
+  implementation 'androidx.core:core:1.2.0-rc01'
   implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
   implementation 'androidx.media:media:1.1.0'
 
-  implementation 'com.google.firebase:firebase-core:17.0.1'
-  implementation 'com.google.firebase:firebase-config:18.0.0'
-  implementation 'com.google.firebase:firebase-perf:18.0.1'
+  implementation 'com.google.firebase:firebase-core:17.2.1'
+  implementation 'com.google.firebase:firebase-config:19.1.0'
+  implementation 'com.google.firebase:firebase-perf:19.0.4'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
   implementation 'androidx.lifecycle:lifecycle-runtime:2.1.0'
 
   implementation 'com.facebook.fresco:fresco:2.0.0'
 
-  implementation 'com.airbnb.android:epoxy:3.8.0'
+  implementation 'com.airbnb.android:epoxy:3.9.0'
 
-  kapt 'com.google.dagger:dagger-compiler:2.25.2'
-  implementation 'com.google.dagger:dagger:2.25.2'
+  kapt 'com.google.dagger:dagger-compiler:2.25.3'
+  implementation 'com.google.dagger:dagger:2.25.3'
 
   implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
   implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
@@ -117,15 +117,15 @@ dependencies {
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'javax.inject:javax.inject:1'
-  testImplementation 'org.mockito:mockito-core:3.1.0'
+  testImplementation 'org.mockito:mockito-core:3.2.4'
   testImplementation 'org.threeten:threetenbp:1.4.0' // to fix failures with three ten db
 
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
   androidTestImplementation 'androidx.test:runner:1.2.0'
   androidTestImplementation 'androidx.test:rules:1.2.0'
-  androidTestImplementation 'org.assertj:assertj-core:3.13.2'
-  androidTestImplementation 'org.mockito:mockito-core:3.1.0'
-  androidTestImplementation 'org.mockito:mockito-android:3.1.0'
+  androidTestImplementation 'org.assertj:assertj-core:3.14.0'
+  androidTestImplementation 'org.mockito:mockito-core:3.2.4'
+  androidTestImplementation 'org.mockito:mockito-android:3.2.4'
   androidTestImplementation 'com.airbnb.okreplay:okreplay:1.5.0'
   androidTestImplementation 'com.airbnb.okreplay:espresso:1.5.0'
   androidTestImplementation 'com.squareup.rx.idler:rx2-idler:0.9.1'
@@ -134,10 +134,10 @@ dependencies {
 
 apply plugin: 'com.jraska.module.graph.assertion'
 
-modulesGraphAssert {
+moduleGraphAssert {
   maxHeight = 4
   moduleLayersFromTheTop = [":feature", ":lib", ":core"]
-  restrinctInLayerDependencies = [":feature", ":lib"]
+  restrictInLayerDependencies = [":feature", ":lib"]
 }
 
 apply plugin: 'com.google.gms.google-services'
