--- a/app/firebase-test-lab.gradle
+++ b/app/firebase-test-lab.gradle
@@ -1,3 +1,6 @@
+import java.time.LocalDateTime
+import java.time.format.DateTimeFormatter
+
 project.afterEvaluate {
   def setupGCloudProject = tasks.register("setupGCloudProject", Exec.class) {
     commandLine = "gcloud config set project github-client-25b47".split(' ')
@@ -11,10 +14,17 @@ project.afterEvaluate {
     dependsOn(setupGCloudProject)
   }
 
-  tasks.register("runInstrumentedTestsOnFirebase", Exec.class) {
+  String resultsFileToPull
+
+  def executeTestsInTestLab = tasks.register("executeInstrumentedTestsOnFirebase", Exec.class) {
     def appApk = "${project.buildDir}/outputs/apk/debug/app-debug.apk"
     def testApk = "${project.buildDir}/outputs/apk/androidTest/debug/app-debug-androidTest.apk"
-    def device = "model=flame,version=29,locale=en,orientation=portrait"
+    def deviceName = "flame"
+    def androidVersion = "29"
+    def device = "model=$deviceName,version=$androidVersion,locale=en,orientation=portrait"
+    def resultDir = DateTimeFormatter.ISO_DATE_TIME.format(LocalDateTime.now())
+
+    resultsFileToPull = "gs://test-lab-twsawhz0hy5am-h35y3vymzadax/$resultDir/$deviceName-$androidVersion-en-portrait/test_result_1.xml"
 
     commandLine =
       ("gcloud " +
@@ -22,12 +32,26 @@ project.afterEvaluate {
         "--app $appApk " +
         "--test $testApk " +
         "--device $device " +
+        "--results-dir $resultDir " +
         "--no-performance-metrics")
         .split(' ')
 
     dependsOn(project.tasks.named("assembleDebugAndroidTest"))
     dependsOn(project.tasks.named("assembleDebug"))
     dependsOn(setupGCloudAccount)
+  }
+
+  def pullResults = tasks.register("pullFirebaseXmlResults", Exec.class) {
+    dependsOn(executeTestsInTestLab)
+
+    doFirst {
+      commandLine = "gsutil cp $resultsFileToPull $buildDir/test-results/firebase-tests-results.xml".split(' ')
+    }
+  }
+
+  tasks.register("runInstrumentedTestsOnFirebase") {
+    dependsOn(executeTestsInTestLab)
+    dependsOn(pullResults)
   }
 }
 
