--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
   implementation gradleApi()
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
-
+  implementation 'com.mixpanel:mixpanel-java:1.4.4'
 }
 
 compileKotlin {
@@ -36,6 +36,10 @@ gradlePlugin {
     firebaseTestLab {
       id = 'com.jraska.github.client.firebase'
       implementationClass = 'com.jraska.github.client.firebase.FirebaseTestLabPlugin'
+    }
+    buildTime {
+      id = 'com.jraska.gradle.buildtime'
+      implementationClass = 'com.jraska.gradle.buildtime.BuildTimePlugin'
     }
   }
 }
