--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,10 +106,13 @@ dependencies {
   implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
   implementation 'androidx.media:media:1.2.0'
 
-  implementation 'com.google.firebase:firebase-core:17.5.1'
-  implementation 'com.google.firebase:firebase-config:19.2.0'
-  implementation 'com.google.firebase:firebase-perf:19.0.9'
-  implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+  implementation platform('com.google.firebase:firebase-bom:25.12.0')
+  implementation 'com.google.firebase:firebase-core'
+  implementation 'com.google.firebase:firebase-config'
+  implementation 'com.google.firebase:firebase-perf'
+  implementation 'com.google.firebase:firebase-crashlytics'
+  implementation 'com.google.firebase:firebase-messaging'
+  implementation 'com.google.firebase:firebase-database'
 
   implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
 
@@ -126,10 +129,10 @@ dependencies {
 
   testImplementation 'com.google.code.gson:gson:2.8.6'
 
-  testImplementation 'junit:junit:4.13.1'
+  testImplementation 'junit:junit:4.13'
   testImplementation 'javax.inject:javax.inject:1'
   testImplementation 'org.mockito:mockito-core:3.5.13'
-  testImplementation 'org.threeten:threetenbp:1.4.5' // to fix failures with three ten db
+  testImplementation 'org.threeten:threetenbp:1.4.4' // to fix failures with three ten db
 
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
   androidTestImplementation 'androidx.test:runner:1.3.0'
