--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id "com.jraska.module.graph.assertion" version "1.4.0"
-  id "com.github.triplet.play" version "2.8.0"
+  id "com.github.triplet.play" version "3.0.0"
   id "com.jraska.github.client.firebase"
   id 'com.jraska.gradle.buildtime'
 }
@@ -22,8 +22,8 @@ android {
     applicationId "com.jraska.github.client"
     minSdkVersion 21
     targetSdkVersion 30
-    versionName '0.19.2'
-    versionCode 54
+    versionName '0.20.1'
+    versionCode 56
     multiDexEnabled true
 
     testInstrumentationRunner "com.jraska.github.client.TestRunner"
@@ -156,7 +156,7 @@ moduleGraphAssert {
 apply plugin: 'com.google.gms.google-services'
 
 play {
-  track = 'alpha'
+  track = 'internal'
   serviceAccountCredentials = file("$buildDir/play-publish-key.json")
 }
 
