--- a/feature/config-debug/build.gradle
+++ b/feature/config-debug/build.gradle
@@ -22,7 +22,10 @@ dependencies {
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
 
-  implementation 'com.google.android.play:core:1.8.3'
+  implementation 'androidx.recyclerview:recyclerview:1.1.0'
+  implementation 'com.airbnb.android:epoxy:4.1.0'
 
   testImplementation 'junit:junit:4.13.1'
+  testImplementation project(':core-testing')
+  testImplementation 'org.assertj:assertj-core:3.18.0'
 }
