--- a/feature/users/build.gradle
+++ b/feature/users/build.gradle
@@ -46,9 +46,8 @@ dependencies {
   testImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.19.0'
-  testImplementation 'org.mockito:mockito-core:3.8.0'
   testImplementation 'androidx.arch.core:core-testing:2.1.0'
-  testImplementation 'androidx.annotation:annotation:1.2.0'
   testImplementation okHttpMockWebServer
   testImplementation project(':core-testing')
+  kaptTest rootProject.ext.daggerAnnotationProcessor
 }
