--- a/.github/workflows/reporting.yml
+++ b/.github/workflows/reporting.yml
@@ -17,7 +17,7 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: key-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties"}}
+          key: build-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum  "app/build.gradle" }}
       - name: Run Module Statistics Report
         run: ./gradlew reportModuleStatistics --stacktrace --no-configure-on-demand
   lintReport:
@@ -32,6 +32,6 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: key-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties"}}
+          key: lint-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum  "app/build.gradle" }}
       - name: Run Lint Report
         run: ./gradlew lintStatisticsReport --stacktrace
