--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,10 @@ android {
       srcDirs += ["../feature/about/src/androidTest/java"]
       srcDirs += ["../feature/users/src/androidTest/java"]
     }
+    sourceSets.androidTest.assets {
+      srcDirs += ["../feature/about/src/androidTest/assets"]
+      srcDirs += ["../feature/users/src/androidTest/assets"]
+    }
   }
 }
 
@@ -157,10 +161,12 @@ dependencies {
   androidTestImplementation 'com.airbnb.okreplay:espresso:1.6.0'
   androidTestImplementation 'com.squareup.rx.idler:rx3-idler:0.11.0'
   androidTestImplementation project(':core-testing')
+  androidTestImplementation project(':core-android-testing')
 
   androidTestImplementation rootProject.ext.retrofit
   androidTestImplementation rootProject.ext.retrofitGsonConverter
   androidTestImplementation rootProject.ext.retrofitRxJavaAdapter
+  androidTestImplementation okHttpMockWebServer
 
   kaptAndroidTest rootProject.ext.daggerAnnotationProcessor
 }
