--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,7 @@ buildscript {
   ext.kotlin_version = '1.5.0'
   repositories {
     google()
-    maven { url 'https://maven.fabric.io/public' }
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-    maven { url "https://plugins.gradle.org/m2/" }
-    jcenter()
+    mavenCentral()
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.2.1'
@@ -21,7 +18,8 @@ buildscript {
 allprojects {
   repositories {
     google()
-    jcenter()
+    mavenCentral()
+    jcenter() // Fresco https://github.com/facebook/fresco/issues/2585
   }
 }
 
