--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,7 +140,6 @@ dependencies {
   implementation rootProject.ext.dagger
 
   implementation rootProject.ext.retrofit
-  implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
   implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
   implementation rootProject.ext.okHttpLoggingInterceptor
 
@@ -149,17 +148,16 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.8'
 
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
   androidTestImplementation 'androidx.test:runner:1.4.0'
   androidTestImplementation 'androidx.test:rules:1.4.0'
   androidTestImplementation 'org.assertj:assertj-core:3.20.2'
-  androidTestImplementation 'com.squareup.rx.idler:rx3-idler:0.11.0'
   androidTestImplementation project(':core-testing')
   androidTestImplementation project(':core-android-testing')
   androidTestImplementation coroutinesJvm
 
   androidTestImplementation rootProject.ext.retrofit
   androidTestImplementation rootProject.ext.retrofitGsonConverter
-  androidTestImplementation rootProject.ext.retrofitRxJavaAdapter
   androidTestImplementation okHttpMockWebServer
 
   kaptAndroidTest rootProject.ext.daggerAnnotationProcessor
