--- a/core-android-testing/build.gradle
+++ b/core-android-testing/build.gradle
@@ -28,9 +28,9 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
   implementation coroutinesJvm
 
+  implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+  implementation 'androidx.test:monitor:1.4.0'
   implementation okHttpMockWebServer
   implementation rootProject.ext.okHttp
   implementation 'com.squareup.okio:okio:2.10.0'
-
-  implementation 'com.squareup.rx.idler:rx3-idler:0.11.0'
 }
