--- a/feature/network-status/build.gradle
+++ b/feature/network-status/build.gradle
@@ -22,7 +22,8 @@ dependencies {
   implementation rootProject.ext.dagger
 
   implementation 'com.google.android.material:material:1.4.0'
-  implementation 'io.reactivex.rxjava3:rxjava:3.1.1'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+  implementation coroutinesJvm
   implementation 'com.jakewharton.timber:timber:5.0.1'
 
   testImplementation 'junit:junit:4.13.2'
